Upgrade and repurpose module - initial commit